<resources>
    <string name="app_name">Adamawa Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Adamawa Tour Guide</string>
    <string name="nav_header_subtitle">www.touradamawa.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="top_attractions">Attractions</string>
    <string name="historical_sites">Sites</string>
    <string name="events">Events</string>
    <string name="t_attract">Top Attractions</string>
    <string name="h_sites">Historical Sites</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="info">Information</string>
    <string name="addr">Address</string>
    <string name="cont">Contact</string>
    <string name="waz">14C Waziri Maccido Road,Malali Kaduna.</string>
    <string name="num">+2349066376106</string>
    <string name="mail">Email</string>
    <string name="bemail">binarycomputers.itsolutions@gmail.com</string>
    <string name="twt">Twitter</string>
    <string name="binaryHandle">\@01Computers</string>
    <string name="bitbbit">Making life easier bit by bit...</string>
    <string name="wedo">What we do</string>
    <string name="sftwhd">Software solutions and computer accesories</string>
    <string name="hndl">\@Mf4z</string>
    <string name="eme">emef4z@gmail.com</string>
    <string name="binCom">Binary Computers I.T Solutions</string>

</resources>
